<resources>
    <string name="app_name">U Train U</string>
    <string name="set">SET</string>
    <string name="go">GO</string>
    <string name="stop">STOP</string>
    <string name="stopwatchStart">00:00:00</string>
    <string name="counter">Counter</string>
    <string name="music">Skip Music</string>

    <string name="todo">TODO</string>

    <string name="title_activity_bike_homepage">bikeHomepage</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <string name="appbar_scrolling_view_behavior" translatable="false">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="first_child">CYCLING</string>
    <string name="second_child">RUN</string>
    <string name="third_child">JUMP ROPE</string>

    <string name="ble_not_supported">Bluetooth LE is not supported</string>
    <string name="label_data">Data:</string>
    <string name="label_heartrate">Heart rate:</string>
    <string name="label_device_address">Device address:</string>
    <string name="label_state">State:</string>
    <string name="label_services">Services</string>
    <string name="no_data">No data</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="title_devices">Bluetooth LE Device Scan</string>
    <string name="error_bluetooth_not_supported">Bluetooth not supported.</string>

    <string name="action_demo">Demo</string>

    <string name="title_demo_accelerometer">Accelerometer Demo</string>
    <string name="title_demo_gyroscope">Gyroscope Demo</string>
    <string name="title_demo_heartrate">Heart rate variability Demo</string>

    <string name="unknown_device">Unknown device</string>
    <string name="unknown_characteristic">Unknown characteristic</string>
    <string name="unknown_service">Unknown service</string>

    <!-- Menu items -->
    <string name="menu_connect">Connect</string>
    <string name="menu_disconnect">Disconnect</string>
    <string name="menu_scan">Scan</string>
    <string name="menu_stop">Stop</string>
</resources>
