<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:keepScreenOn="true"
    >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/spinner1"
        android:layout_centerHorizontal="true"
        android:text=""
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_below="@+id/progressBar"
        android:layout_toEndOf="@+id/button3"
        android:ems="10"
        android:inputType="number"
        android:visibility="gone" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"

        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/editText"
        android:text="@string/set"
        android:visibility="gone" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/editText"
        android:text="@string/go" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/textView1"
        android:text="@string/stop"
        android:visibility="invisible" />


    <ListView
        android:id="@+id/ctItems"
        style="@style/Widget.AppCompat.ListView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/stopwatch"
        android:layout_marginStart="12dp"
        android:choiceMode="singleChoice"
        android:clickable="false"
        android:headerDividersEnabled="false" />


    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="250dp"
        android:layout_height="20dp"
        android:layout_below="@+id/spinner1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="22dp"
        android:indeterminate="false"
        android:max="48"
        android:progress="45"
        android:progressDrawable="@drawable/line" />

    <Spinner
        android:id="@+id/spinner1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@android:drawable/btn_dropdown"
        android:padding="0dip"
        android:spinnerMode="dropdown"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/stopwatch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/progressBar"
        android:layout_centerHorizontal="true"
        android:text="@string/stopwatchStart"
        android:textColor="#009688"
        android:textSize="50sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/counter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView1"
        android:layout_centerHorizontal="true"
        android:text="@string/counter" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:checked="false"
        android:text="@string/music" />

    <TextView
        android:id="@+id/heartrate_value2"
        android:layout_width="93dp"
        android:layout_height="93dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/heart"
        android:gravity="center"
        android:minLines="1"
        android:text="@string/no_data"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="#44ff44"
        android:textSize="30sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/scan"
        android:layout_width="59dp"
        android:layout_height="62dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="5dp"
        android:background="@android:color/transparent"
        android:backgroundTint="@android:color/transparent" />


</RelativeLayout>
