<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:keepScreenOn="true"
    >

    <TextView
        android:id="@+id/counter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView1"
        android:layout_centerHorizontal="true"
        android:text="@string/counter" />
    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/stopwatch"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="19dp"
        android:text=""
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="70dp"
        android:layout_height="wrap_content"

        android:layout_alignBaseline="@+id/button"
        android:layout_alignBottom="@+id/button"
        android:layout_alignStart="@+id/stopwatch"
        android:ems="10"
        android:inputType="number" />

    <EditText
        android:id="@+id/description"
        android:layout_width="137dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/counter"
        android:layout_alignTop="@+id/editText"
        android:ems="10"
        android:inputType="text"        />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/spinner1"
        android:layout_toStartOf="@+id/stopwatch"
        android:text="@string/set"
        android:visibility="visible" />

    <Button
        android:id="@+id/button"
        android:layout_width="78dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView1"
        android:layout_alignParentEnd="true"
        android:text="@string/go" />


    <ListView
        android:id="@+id/ctItems"
        style="@style/Widget.AppCompat.ListView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="false"
        android:layout_below="@+id/textView1"
        android:choiceMode="singleChoice"
        android:clickable="false" />


    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="250dp"
        android:layout_height="273dp"
        android:layout_centerHorizontal="true"
        android:indeterminate="false"
        android:max="48"
        android:progress="45"
        android:progressDrawable="@drawable/circle"/>

    <Spinner
        android:id="@+id/spinner1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/editText"
        android:layout_toStartOf="@+id/editText"
        android:background="@android:drawable/btn_dropdown"
        android:padding="0dip"
        android:spinnerMode="dropdown"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/stopwatch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/progressBar"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="73dp"
        android:text="@string/stopwatchStart"
        android:textColor="#009688"
        android:textSize="50sp"
        android:textStyle="bold" />


    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:checked="false"
        android:text="@string/music" />

    <TextView
        android:id="@+id/heartrate_value2"
        android:layout_width="96dp"
        android:layout_height="77dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="65dp"
        android:background="@drawable/heart"
        android:minLines="1"
        android:text="@string/no_data"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="#44ff44"
        android:textSize="30sp" />

    <Button
        android:id="@+id/save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ctItems"
        android:text="Save" />

    <EditText
        android:id="@+id/saveAs"
        android:layout_width="137dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/save"
        android:layout_alignBottom="@+id/save"
        android:layout_toEndOf="@+id/save"
        android:ems="10"
        android:inputType="text"        />


    <Button
        android:id="@+id/load"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/save"
        android:text="load" />

    <ListView
        android:id="@+id/savedItems"
        style="@style/Widget.AppCompat.ListView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="false"
        android:layout_below="@+id/load"
        android:choiceMode="singleChoice"
        android:clickable="false" />
</RelativeLayout>
